Fix next event alignment in dynamic banner

--- a/wp-content/themes/wprig-ucf-bands/assets/css/src/full-score-events/editor-styles.css
+++ b/wp-content/themes/wprig-ucf-bands/assets/css/src/full-score-events/editor-styles.css
@@ -11,3 +11,7 @@
 [data-type="full-score-events/next-event"] {
 	justify-self: start;
 }
+
+[data-type="knight-blocks/dynamic-banner-addl"] [data-type="full-score-events/next-event"] {
+	justify-self: unset;
+}
